[tool.poetry]
name = "music"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "3.0.3"
pytube = "15.0.0"
requests = "2.32.3"
sqlalchemy = "2.0.31"
unlimited-youtube-search = "0.1.2"
flask-cors = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
